--- a/.gitignore
+++ b/.gitignore
@@ -12,22 +12,25 @@ export default class InvestmentAccountFee {
     if (!fees || !Array.isArray(fees) || fees.length === 0) {
       throw new Error('Fees is empty or undefined');
     }
-    // Seleciona os fees cujo FeeType seja "Investment Account Fees"
+    // Seleciona o objeto cujo FeeType seja "Investment Account Fees"
     this.#investiment = fees.filter((x) => x.feeType === this.#feeName)[0];
-    if (!this.#investiment || !Array.isArray(this.#investiment.feeGroups)) {
-      throw new Error('Investment Account Fees or feeGroups are undefined');
-    }
-    if (!accounts || !Array.isArray(accounts) || accounts.length === 0) {
-      throw new Error('Accounts is empty or undefined');
+    if (
+      !this.#investiment ||
+      !Array.isArray(this.#investiment.feeGroups) ||
+      !this.#investiment.feeGroups.length
+    ) {
+      this.#investiment = {};
+      return;
     }
 
-    // Filtra as contas cujo feeType mapeado seja 3 (Investment)
+    // Filtra as contas de investimento (FeeType mapeado para 3)
     this.#accounts = accounts.filter((x) => x.feeType === 3);
     if (this.#accounts.length < 1) {
-      throw new Error('No accounts matched with Investment Account Fees feeType');
+      this.#investiment = {};
+      return;
     }
 
-    // Para cada conta, criamos dois itens em accountsDDA com os códigos 5 e 7 (para os dois grupos de Investment)
+    // Para cada conta, cria itens para os códigos 5 e 7 (que definem os grupos de Investment)
     this.#accounts.forEach((acc) => {
       if (acc.ddaNumber) {
         this.#accountsDDA.push({
@@ -42,24 +45,23 @@ export default class InvestmentAccountFee {
         });
       }
     });
-    // Deduplica os itens com base na chave "number-code"
+
+    // Deduplica os itens de accountsDDA com base na chave composta "number-code"
     this.#accountsDDA = Array.from(
       new Map(this.#accountsDDA.map(item => [`${item.number}-${item.code}`, item])).values()
     );
 
-    // Cria grupos (feeGroups) para cada conta única
     this.#addMultiplesAccount(this.#accounts[0].cifno);
-    // Atualiza os valores (labelValue) de cada fee, conforme os dados do cliente e possíveis exceções
     this.#addCurrentClientValue(equityField);
   }
 
   get fee() {
+    if (!this.#investiment || !this.#investiment.feeGroups) {
+      return null;
+    }
     return this.#investiment;
   }
 
-  /**
-   * Função auxiliar para deduplicar os fields com base no código do fee.
-   */
   #deduplicateFields(fields) {
     const map = new Map();
     for (const field of fields) {
@@ -71,42 +73,79 @@ export default class InvestmentAccountFee {
   }
 
   /**
-   * Para cada conta (representada em accountsDDA), cria um novo FeeGroup a partir dos templates
-   * existentes em this.#investiment.feeGroups. Cada novo grupo terá o número da conta atribuído.
+   * Para cada feeGroup do objeto de investimento, verifica se o grupo possui fields.
+   * Se estiver vazio, o grupo é ignorado.
+   * Caso haja fields, clona os fields e os agrupa para cada conta (identificada em accountsDDA).
    */
   #addMultiplesAccount(cif) {
-    const feeGroupTemplates = this.#investiment.feeGroups;
-    const newFeeGroups = [];
-    for (const account of this.#accountsDDA) {
-      const accountNumber = account.number.toString();
-      for (const template of feeGroupTemplates) {
-        // Clona os fields para evitar referências compartilhadas
-        let clonedFields = template.fields.map((field) => ({
-          ...field,
-          exceptionOptions: field.exceptionOptions
-            ? field.exceptionOptions.map((opt) => ({ ...opt }))
-            : []
-        }));
-        // Deduplica os fields com base no fee code
-        clonedFields = this.#deduplicateFields(clonedFields);
-        const newFeeGroup = new FeeGroup({
-          name: template.name,
-          fields: clonedFields,
-          cif,
-          accountNumber,
-          visible: template.visible,
-          code: template.code
-        });
-        newFeeGroups.push(newFeeGroup);
+    const result = {};
+
+    for (const feeGroup of this.#investiment.feeGroups) {
+      // Se não houver fields no grupo, ignora-o
+      if (!feeGroup.fields || feeGroup.fields.length === 0) {
+        continue;
+      }
+      // Clona os fields para garantir que cada field tenha exceptionOptions definida
+      feeGroup.fields = feeGroup.fields.map((field) => ({
+        ...field,
+        exceptionOptions: field.exceptionOptions ? field.exceptionOptions.map(opt => ({ ...opt })) : []
+      }));
+
+      for (const account of this.#accountsDDA) {
+        if (!result[account.number]) {
+          result[account.number] = {};
+        }
+
+        // Filtra os fields do grupo que correspondem ao código da conta
+        const fieldsForAccount = feeGroup.fields.filter((x) => x.code === account.code);
+        if (fieldsForAccount.length === 0) continue;
+
+        if (!result[account.number][feeGroup.name]) {
+          result[account.number][feeGroup.name] = [];
+
+          // Processa as exceptionOptions dos fields para agregar em allExceptions
+          feeGroup.fields.forEach((item) => {
+            item.exceptionOptions = item.exceptionOptions.filter((x) => !x.retired);
+            item.exceptionOptions.forEach(this.#allExceptions.add, this.#allExceptions);
+          });
+
+          const newFeeGroup = new FeeGroup({
+            name: feeGroup.name,
+            fields: fieldsForAccount,
+            cif,
+            accountNumber: account.number,
+            visible: feeGroup.visible,
+            code: feeGroup.code,
+            entityCode: account.entity,
+          });
+          result[account.number][feeGroup.name].push(newFeeGroup);
+          continue;
+        }
+
+        const feeGroupToAddFields = result[account.number][feeGroup.name][0];
+        feeGroupToAddFields.fields = [...feeGroupToAddFields.fields, ...fieldsForAccount];
       }
     }
-    this.#investiment.feeGroups = newFeeGroups;
+
+    const feeGroupsByAccount = Object.keys(result).reduce((acc, accountNumber) => {
+      Object.keys(result[accountNumber]).forEach((groupName) => {
+        acc.push(result[accountNumber][groupName]);
+      });
+      return acc;
+    }, []);
+
+    this.#investiment.feeGroups = [];
+    for (const feeGroups of feeGroupsByAccount) {
+      for (const feeGroup of feeGroups) {
+        this.#investiment.feeGroups.push(feeGroup);
+      }
+    }
   }
 
   /**
-   * Atualiza os valores de cada fee (labelValue) para os grupos de Investment.
-   * Para fields com código 5, usa o valor recebido do banco (texto) sem conversão.
-   * Para os demais (por exemplo, código 7), converte o defaultValue para número e formata como moeda.
+   * Atualiza os valores de cada field.
+   * Para fields com código 5, utiliza o defaultValue recebido (que contém o texto completo).
+   * Para os demais, tenta converter o defaultValue para número e formata como moeda.
    */
   #addCurrentClientValue(equityField) {
     const exceptionsOptions = Array.from(this.#allExceptions);
@@ -114,17 +153,15 @@ export default class InvestmentAccountFee {
       feeGroup.cif = this.#accounts[0]?.cifno || null;
       for (const field of feeGroup.fields) {
         if (field.isException) {
-          // Se for field de exceção, tenta copiar o labelValue do grupo anterior
-          // (a lógica pode ser ajustada conforme necessidade)
           field.labelValue = field.labelValue || '';
         } else {
-          // Para cada conta, se o número da conta do grupo bater com o ddaNumber da conta
           for (const account of this.#accounts) {
             if (
+              field.code === account.ddaNumber &&
               feeGroup.accountNumber.toString() === account.ddaNumber.toString()
             ) {
               if (field.code === 5) {
-                // Para fields com código 5, o defaultValue já contém o texto a ser exibido
+                // Para fields com código 5, usa o defaultValue (texto completo, ex: "$0.10 per share, min charge of $150 per trade")
                 field.labelValue = field.defaultValue;
               } else {
                 if (field.isCurrentClient) {
