--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@ export default class InvestmentAccountFee {
   #allExceptions = new Set();
 
   constructor(fees, accounts, equityField) {
-    // Seleciona o fee cujo FeeType seja "Investment Account Fees"
+    if (!fees || !Array.isArray(fees) || fees.length === 0) {
+      throw new Error('Fees is empty or undefined');
+    }
+    // Seleciona o objeto cujo FeeType seja "Investment Account Fees"
     this.#investiment = fees.filter((x) => x.feeType === this.#feeName)[0];
     if (
       !this.#investiment ||
@@ -20,15 +23,14 @@ export default class InvestmentAccountFee {
       return;
     }
 
-    // Filtra as contas de investimento – 
-    // IMPORTANTE: Certifique-se de que as contas de investimento estejam marcadas com feeType === 3
+    // Filtra as contas de investimento (conforme mapeamento: Investment Fees = feeType 3)
     this.#accounts = accounts.filter((x) => x.feeType === 3);
     if (this.#accounts.length < 1) {
       this.#investiment = {};
       return;
     }
 
-    // Para cada conta, cria dois itens (para os códigos 5 e 7)
+    // Para cada conta, cria itens para os códigos 5 e 7 (do Investment)
     this.#accounts.forEach((acc) => {
       if (acc.ddaNumber) {
         this.#accountsDDA.push({
@@ -60,7 +62,7 @@ export default class InvestmentAccountFee {
     return this.#investiment;
   }
 
-  // Função auxiliar para deduplicar os fields com base no código do fee
+  // Auxiliar: deduplica os fields com base no fee code
   #deduplicateFields(fields) {
     const map = new Map();
     for (const field of fields) {
@@ -72,22 +74,23 @@ export default class InvestmentAccountFee {
   }
 
   /**
-   * Para cada feeGroup do objeto de investimento, para cada conta única (representada em accountsDDA),
-   * clona os feeGroups e filtra os fields de acordo com o código (5 ou 7).
-   * Se o grupo não possuir fields (array vazio), ele é ignorado.
+   * Para cada feeGroup do objeto de investimento e para cada conta (em accountsDDA),
+   * clona o feeGroup atribuindo o número da conta. Mesmo que o array de fields esteja vazio,
+   * o grupo será criado.
    */
   #addMultiplesAccount(cif) {
     const result = {};
 
     for (const feeGroup of this.#investiment.feeGroups) {
-      // Se o array de fields estiver vazio, ignora este grupo
-      if (!feeGroup.fields || feeGroup.fields.length === 0) {
-        continue;
-      }
+      // Se o array de fields for undefined, seta como array vazio (mas não pula o grupo)
+      feeGroup.fields = feeGroup.fields || [];
+
       // Clona os fields para garantir que cada field tenha exceptionOptions definida
       feeGroup.fields = feeGroup.fields.map((field) => ({
         ...field,
-        exceptionOptions: field.exceptionOptions ? field.exceptionOptions.map(opt => ({ ...opt })) : []
+        exceptionOptions: field.exceptionOptions
+          ? field.exceptionOptions.map(opt => ({ ...opt }))
+          : []
       }));
 
       for (const account of this.#accountsDDA) {
@@ -97,12 +100,11 @@ export default class InvestmentAccountFee {
 
         // Filtra os fields do grupo que correspondem ao código da conta (5 ou 7)
         const fieldsForAccount = feeGroup.fields.filter((x) => x.code === account.code);
-        if (fieldsForAccount.length === 0) continue;
-
+        // Removi o "if (fieldsForAccount.length === 0) continue;" para que grupos sem fields sejam mantidos.
         if (!result[account.number][feeGroup.name]) {
           result[account.number][feeGroup.name] = [];
 
-          // Processa as exceptionOptions para agregar em allExceptions
+          // Processa as exceptionOptions dos fields para agregar em allExceptions
           feeGroup.fields.forEach((item) => {
             item.exceptionOptions = item.exceptionOptions.filter((x) => !x.retired);
             item.exceptionOptions.forEach(this.#allExceptions.add, this.#allExceptions);
@@ -110,7 +112,7 @@ export default class InvestmentAccountFee {
 
           const newFeeGroup = new FeeGroup({
             name: feeGroup.name,
-            fields: fieldsForAccount,
+            fields: fieldsForAccount, // pode ser vazio
             cif,
             accountNumber: account.number,
             visible: feeGroup.visible,
@@ -118,11 +120,10 @@ export default class InvestmentAccountFee {
             entityCode: account.entity,
           });
           result[account.number][feeGroup.name].push(newFeeGroup);
-          continue;
+        } else {
+          const feeGroupToAddFields = result[account.number][feeGroup.name][0];
+          feeGroupToAddFields.fields = [...feeGroupToAddFields.fields, ...fieldsForAccount];
         }
-
-        const feeGroupToAddFields = result[account.number][feeGroup.name][0];
-        feeGroupToAddFields.fields = [...feeGroupToAddFields.fields, ...fieldsForAccount];
       }
     }
 
@@ -143,8 +144,8 @@ export default class InvestmentAccountFee {
 
   /**
    * Atualiza os valores dos fields de cada FeeGroup:
-   * - Para fields com código 5, utiliza o defaultValue recebido (que contém o texto completo, ex: "$0.10 per share, min charge of $150 per trade")
-   * - Para os demais, tenta converter o defaultValue para número e formata como moeda (com "$" e duas casas decimais)
+   * - Para fields com código 5, utiliza o defaultValue recebido (texto completo, ex: "$0.10 per share, min charge of $150 per trade")
+   * - Para os demais, tenta converter o defaultValue para número e formata como moeda.
    */
   #addCurrentClientValue(equityField) {
     const exceptionsOptions = Array.from(this.#allExceptions);
@@ -160,7 +161,7 @@ export default class InvestmentAccountFee {
               feeGroup.accountNumber.toString() === account.ddaNumber.toString()
             ) {
               if (field.code === 5) {
-                // Para fields com código 5, utiliza o defaultValue recebido (texto completo)
+                // Para fields com código 5, utiliza o defaultValue (texto completo)
                 field.labelValue = field.defaultValue;
               } else {
                 if (field.isCurrentClient) {
